--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <p style="margin-bottom: 100px;">
 
                 <div class="container-fluid px-4 px-lg-0">
-                    <h1 class="fst-italic lh-1 mb-4">Our Website is Coming Soon</h1>
+                    <p style="color: #87CEEB" >Our Website is Coming Soon</p>
                     <p class="mb-5">We're working hard to finish the development of this site. Sign up below to receive updates and to be notified when we launch!</p>
                     <div class="inner">
       
