--- a/index.html
+++ b/index.html
@@ -59,6 +59,8 @@
                 <a class="btn btn-dark m-3" href="https://plus.google.com/+Ri.Ad.sro">  <i class="fab fa-google-plus"></i></a>
                 <a style="margin-bottom: 100px;"></a>
                 <a class="btn btn-dark m-3" href="mailto:ri.ad_sro@outlook.com">        <i class="fa fa-envelope"></i></a>                
+                <a class="btn btn-dark m-3" href="tel:+420601601708"><i class="fa fa-phone-square"></i></a><a href="tel:+420601601708"></i>
+
             </div>
         </div>
        
