--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
                     <p style="color: #fffcfa; font-size:30px"><i class="fas fa-chart-line"></i>   Our Website is Coming Soon</p>
                     <p class="mb-5">We're working hard to finish the development of this site. Sign up below to receive updates and to be notified when we launch!</p>
                     <div class="inner">
-      
+
+                        <p style="margin-bottom: 200px;">
                         <p style="font:size 15px;">Copyright &copy 
                             <a style="position:relative; left:12px;  color:#87CEEB" href="http://eriad.cz/">eRiAd.cz</a> </p>
                         <p> <a style="position:relative; left:135px; color:#87CEEB" href="http://eriad.eu"> eRiAd.eu </a> </p>
