--- a/index.html
+++ b/index.html
@@ -56,14 +56,36 @@
         <!-- For more icon options, visit https://fontawesome.com/icons?d=gallery&p=2&s=brands-->
         <div class="social-icons">
             <div class="d-flex flex-row flex-lg-column justify-content-center align-items-center h-100 mt-3 mt-lg-0">
-                <a class="btn btn-dark m-3" href="https://twitter.com/Ri.Ad.sro">       <i class="fab fa-twitter">   </i></a>
-                <a class="btn btn-dark m-3" href="https://www.facebook.com/Ri.Ad.sro">  <i class="fab fa-facebook-f"></i></a>
-                <a class="btn btn-dark m-3" href="https://www.instagram.com//Ri.Ad.sro"><i class="fab fa-instagram"></i></a>
-                <a class="btn btn-dark m-3" href="https://plus.google.com/+Ri.Ad.sro">  <i class="fab fa-google-plus"></i></a>
+                <a class="btn btn-dark m-3" 
+                   href="https://twitter.com/Ri.Ad.sro"
+                   data-toggle="tooltip"
+                   title="Share in Twitter"
+                   class="twitter"><i class="fab fa-twitter">   </i></a>
+                <a class="btn btn-dark m-3"
+                   href="https://www.facebook.com/Ri.Ad.sro"
+                   data-toggle="tooltip"
+                   title="Share in Facebook"
+                   class="facebook"><i class="fab fa-facebook-f"></i></a>
+                <a class="btn btn-dark m-3"
+                   href="https://www.instagram.com//Ri.Ad.sro"
+                   data-toggle="tooltip" title="Share in Instagram"
+                   class="instagram"><i class="fab fa-instagram"></i></a>
+                <a class="btn btn-dark m-3" 
+                   href="https://plus.google.com/+Ri.Ad.sro" 
+                   data-toggle="tooltip" 
+                   title="Share in Google +"
+                   class="google-plus"><i class="fab fa-google-plus"></i></a>
                 <a style="margin-bottom: 100px;"></a>
-                <a class="btn btn-dark m-3" href="mailto:ri.ad_sro@outlook.com">        <i class="fa fa-envelope"></i></a>                
-                <a class="btn btn-dark m-3" href="tel:+420601601708"><i class="fa fa-phone-square"></i></a><a href="tel:+420601601708"></i>
-
+                <a class="btn btn-dark m-3"
+                   href="mailto:ri.ad_sro@outlook.com"
+                   data-toggle="tooltip"
+                   title="Connect with Email"
+                   class="email"><i class="fa fa-envelope"></i></a>                
+                <a class="btn btn-dark m-3"
+                   href="tel:+420601601708"
+                   data-toggle="tooltip"
+                   title="Connect with Skype"
+                   class="skype"><i class="fa fa-phone-square"></i></a><a href="tel:+420601601708"></i>
             </div>
         </div>
        
