--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                    href="tel:+420601601708"
                    data-toggle="tooltip"
                    title="Connect with Skype"
-                   class="skype"><i class="fa fa-phone-square"></i></a><a href="tel:+420601601708"></i>
+                   class="skype"><i class="fa fa-phone-square"></i></a><a href="tel:+420601601708"></i></a>
             </div>
         </div>
        
